--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -25,6 +25,7 @@ koin = "4.0.2"
 ktor = "3.0.0"
 coil3 = "3.0.0"
 buildKonfig = "0.15.1"
+backhandler = "1.8.1"
 
 [libraries]
 adaptive = { module = "org.jetbrains.compose.material3.adaptive:adaptive", version.ref = "adaptiveZ" }
@@ -68,6 +69,7 @@ coil-compose-core = { module = "io.coil-kt.coil3:coil-compose-core", version.ref
 coil-network-ktor3 = { module = "io.coil-kt.coil3:coil-network-ktor3", version.ref = "coil3" }
 coil-mp = { module = "io.coil-kt.coil3:coil", version.ref = "coil3" }
 material-icons-core = { module = "org.jetbrains.compose.material:material-icons-core", version.ref = "materialIconsCore" }
+ui-backhandler = { module = "org.jetbrains.compose.ui:ui-backhandler", version.ref = "backhandler" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
