--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,31 +1,31 @@
 [versions]
 adaptiveZ = "1.1.2"
-agp = "8.12.2"
+agp = "8.12.3"
 android-compileSdk = "36"
 android-minSdk = "24"
 android-targetSdk = "36"
-androidx-activityCompose = "1.10.1"
+androidx-activityCompose = "1.11.0"
 androidx-appcompat = "1.7.1"
 androidx-constraintlayout = "2.2.1"
 androidx-core-ktx = "1.17.0"
 androidx-espresso-core = "3.7.0"
-androidx-lifecycle = "2.9.3"
+androidx-lifecycle = "2.9.4"
 androidx-material = "1.13.0"
 androidx-test-junit = "1.3.0"
-compose-multiplatform = "1.8.2"
+compose-multiplatform = "1.9.0"
 junit = "4.13.2"
 kotlin = "2.2.20"
 kotlinx-coroutines = "1.10.2"
 kotlinxDatetime = "0.7.1"
 ksp = "2.2.20-2.0.2"
 materialIconsCore = "1.7.3"
-navigationCompose = "2.8.0-alpha13"
+navigationCompose = "2.9.0"
 kotlinSerialization = "1.9.0"
 koin = "4.1.1"
-ktor = "3.2.3"
+ktor = "3.3.0"
 coil3 = "3.3.0"
 buildKonfig = "0.17.1"
-backhandler = "1.8.2"
+backhandler = "1.9.0"
 
 [libraries]
 adaptive = { module = "org.jetbrains.compose.material3.adaptive:adaptive", version.ref = "adaptiveZ" }
